--- a/pages/pets.html
+++ b/pages/pets.html
@@ -25,13 +25,18 @@
             <li><a href="../index.html" class="nav-link-pets">Contacts </a></li>
           </ul>
         </nav>
+        <div class="burger-menu">
+          <div class="burger-line "></div>
+          <div class="burger-line "></div>
+          <div class="burger-line "></div>
+        </div>
       </header>
       <main class="pets-main">
         <section class="pets-section">
           <h1 class="pets-heading">Our friends who
             are looking for a house</h1>
             <div class="pets-cards">
-              <div class="slider-card">
+              <div class="slider-card-pets">
                 <img
                   class="slider-card-img"
                   src="../assets/Jpg/pets-katrine.jpg"
@@ -40,7 +45,7 @@
                 <h3 class="slider-puppy-name">Katrine</h3>
                 <button class="card-btn">Learn more</button>
               </div>
-              <div class="slider-card">
+              <div class="slider-card-pets">
                 <img
                   class="slider-card-img"
                   src="../assets/Jpg/pets-jennifer.jpg"
@@ -49,7 +54,7 @@
                 <h3 class="slider-puppy-name">Jennifer</h3>
                 <button class="card-btn">Learn more</button>
               </div>
-              <div class="slider-card">
+              <div class="slider-card-pets">
                 <img
                   class="slider-card-img"
                   src="../assets/Jpg/pets-woody.jpg"
@@ -58,7 +63,7 @@
                 <h3 class="slider-puppy-name">Woody</h3>
                 <button class="card-btn">Learn more</button>
               </div>
-              <div class="slider-card">
+              <div class="slider-card-pets">
                 <img
                   class="slider-card-img"
                   src="../assets/Jpg/pets-sophia.jpg"
@@ -67,7 +72,7 @@
                 <h3 class="slider-puppy-name">Sophia</h3>
                 <button class="card-btn">Learn more</button>
               </div>
-              <div class="slider-card">
+              <div class="slider-card-pets">
                 <img
                   class="slider-card-img"
                   src="../assets/Jpg/pets-timmy.jpg"
@@ -76,7 +81,7 @@
                 <h3 class="slider-puppy-name">Timmy</h3>
                 <button class="card-btn">Learn more</button>
               </div>
-              <div class="slider-card">
+              <div class="slider-card-pets">
                 <img
                   class="slider-card-img"
                   src="../assets/Jpg/pets-charly.jpg"
@@ -85,7 +90,7 @@
                 <h3 class="slider-puppy-name">Charly</h3>
                 <button class="card-btn">Learn more</button>
               </div>
-              <div class="slider-card">
+              <div class="slider-card-pets">
                 <img
                   class="slider-card-img"
                   src="../assets/Jpg/pets-scarlet.jpg"
@@ -94,7 +99,7 @@
                 <h3 class="slider-puppy-name">Scarlett</h3>
                 <button class="card-btn">Learn more</button>
               </div>
-              <div class="slider-card">
+              <div class="slider-card-pets">
                 <img
                   class="slider-card-img"
                   src="../assets/Jpg/pets-freddie.jpg"
@@ -151,5 +156,6 @@
         </div>
       </footer>
     </div>
+    <script src="../index.js"></script>
   </body>
 </html>
